--- a/code_structure/index.html
+++ b/code_structure/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <img id="worm" src="./assets/enemy_ghost.png" alt="worm" />
+    <img id="worm" src="./assets/enemy_worm.png" alt="worm" />
     <img id="ghost" src="./assets/enemy_ghost.png" alt="ghost" />
-    <img id="spider" src="./assets/enemy_spider.png" alt="enemy_spider" />
+    <img id="spider" src="./assets/enemy_spider.png" alt="spider" />
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
