--- a/state_management/index.html
+++ b/state_management/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <img id="dogImage" src="./dog_left_right_white.png" alt="dog_left_right_white" />
+    <img id="dogImage" src="./assets/img/dog_left_right_white.png" alt="dog_left_right_white" />
     <h1 id="loading">LOADING...</h1>
 
     <script type="module" src="script.js"></script>
